2007-XX-XX
	* Added version check and exit if we do not support the trac version
	  closes bug #23
	  Reported By: Marc Zahnlecker m.zahnlecker at lxbyte dot de
	  Fixed By   : Bas van der Vlies

2007-07-18

	* Implemented python_egg_cache environment variable. Some trac
	  installations may depend on it, closes ticket #10, eg:
	  	python_egg_cache : /var/cache/eggcache

	  Reported By: Anonymous
	  Fixed by   : Bas van der Vlies <basv@sara.nl>

	* Implemented update ticket fields via email subject line, eg:
	  	Re: [email2trac] #7?owner=bas,priority=minor: Error in parsing

	  	- Sets the owner of the ticket to: bas
		- Sets the priority of the ticket to: minor
	 
	  For some ticket fields there are only a limited number of allowed
	  values. The supplied value will be checked against this list. If it
	  is not vaild value the field update will be ignored.

	  Requested by  : trac at yadan dotnet, Jan Parchmann, see ticket #7
	  Implemented by: Bas van der Vlies <basv@sara.nl>

	* Dropped support for version trac version 0.8. Removed all 0.8
	  specific code.  
	  Fixed by: Bas van der Vlies <basv@sara.nl>

	* Added a new config parameter: tmpdir: /var/tmp, default is '/tmp'
	  All functions now use this new parameter and use OS independent 
	  path functions. 
	  Implemented by: Bas van der Vlies <basv@sara.nl>

	* fixed and a creating directory problem email2trac.spec file
	  Fixed by: artrus at netzero dot net

	* set_owner function is obsolete. When component is set the trac code
	  will set the owner to the component owner. 
	  Fixed by    : Bas van der Vlies <basv@sara.nl>

	* Also show email headers in a ticket update.
	  Requested by: Ramon Bastiaans 
	  Fixed by    : Bas van der Vlies <basv@sara.nl>

	* A date patch so it works with trac version 0.11 for ticket updates. 
	  Also applied for other trac versions.
	  Thanks to: tbaschak at ktc dot mb dot ca

2007-04-27

	* Added check to catch an error when attachment size
	  is too large, bug #1153