@@ -88,8 +88,16 @@ import unicodedata
 import ConfigParser
 from stat import *
 import mimetypes
-import syslog
 import traceback
+
+
+# Will fail where unavailable, e.g. Windows
+#
+try:
+    import syslog 
+    SYSLOG_AVAILABLE = True
+except ImportError:
+    SYSLOG_AVAILABLE = False
 
 from datetime import tzinfo, timedelta, datetime
 
@@ -1067,7 +1075,8 @@ if __name__ == '__main__':
 			sys.exit(1)
 			
 		if settings.has_key('enable_syslog'):
-			ENABLE_SYSLOG =  float(settings['enable_syslog']) 
+			if SYSLOG_AVAILABLE:
+				ENABLE_SYSLOG =  float(settings['enable_syslog']) 
 
 		env = Environment(settings['project'], create=0)
 		tktparser = TicketEmailParser(env, settings, float(version))
